--- a/wordpress/.htaccess
+++ b/wordpress/.htaccess
@@ -33,4 +33,16 @@ RewriteRule . /index.php [L]
 	# WP Increse Maximum Execution Time
 	<IfModule mod_php5.c>
 		php_value max_execution_time 300
+	</IfModule>
+	# WP Increse Maximum Execution Time
+	<IfModule mod_php5.c>
+		php_value max_execution_time 300
+	</IfModule>
+	# WP Increse Maximum Execution Time
+	<IfModule mod_php5.c>
+		php_value max_execution_time 300
+	</IfModule>
+	# WP Increse Maximum Execution Time
+	<IfModule mod_php5.c>
+		php_value max_execution_time 300
 	</IfModule>
